# zerocast

./: .gitattributes  .gitignore  Cargo.toml  README.md  analytics.py  architecture.puml  collect_bench_data.py  control_pipeline.puml  generate_report.py  media_pipeline.puml  plot_real_data.py  quick_setup.py  security.puml  setup.sh
.cargo/: config.toml
docs/: architecture.puml  control_pipeline.puml  media_pipeline.puml  security.puml  tcp_limitations.puml
zerocast_client/: Cargo.toml
zerocast_client/src/: main.rs
zerocast_client/src/features/: input.rs  media.rs  mod.rs  ui.rs
zerocast_client/src/features/auth/: interactor.rs
zerocast_client/src/shared/: events.rs
zerocast_core/: Cargo.toml
zerocast_core/src/: auth.rs  input.rs  lib.rs
zerocast_server/: Cargo.toml  REPORT.md
zerocast_server/src/: main.rs
zerocast_server/src/features/: input.rs  media.rs  mod.rs
zerocast_server/src/features/auth/: crypto.rs  interactor.rs  mod.rs  session.rs
zerocast_server/tests/: load_test.rs  performance_metrics.rs  real_bench.rs
