[workspace]
resolver = "3"
members = [
  "zerocast_server",
  "zerocast_client",
  "zerocast_core"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gstreamer = "0.22"
gstreamer-app = "0.22"
glib = "0.19"