[package]
name = "zerocast_client"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocast_core = { path = "../zerocast_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
enigo = { workspace = true }
eframe = "0.27"