[package]
name = "zerocast_server"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocast_core = { path = "../zerocast_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
glib = { workspace = true }
enigo = { workspace = true }
bincode = { workspace = true }
tokio-native-tls = { workspace = true }
native-tls = { workspace = true }
rand = "0.10.1"
sysinfo = "0.30"
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }